Rearranged code, Optimized imports again & Log rearrangments.